# rcbk

./: .gitignore  CMakeLists.txt  Makefile  Makefile.O2  Makefile.amplitude  Makefile.dbg  Makefile.fgi  README.md  filelist.m  runjob_multi.sh  runjob_param.sh
amplitudelib/: amplitudelib.cpp  amplitudelib.hpp  datafile.cpp  datafile.hpp  fourier  main.cpp  ugd.cpp  ugd.hpp
src/: CMakeLists.txt  amplitude.cpp  amplitude.hpp  config.cpp  config.hpp  gbw.cpp  gbw.hpp  ic.cpp  ic.hpp  ic_datafile.cpp  ic_datafile.hpp  ic_special.cpp  ic_special.hpp  interpolation.cpp  interpolation.hpp  main.cpp  mv.cpp  mv.hpp  solver.cpp  solver.hpp  tools.cpp  tools.hpp
